fixed arrayshow disks ui overflow change horizontal scrollbar height change auto-create button primary to outlined change uuid and nqn to ellipse and on hover show it in tooltip change the rows hight

--- a/src/mtool/ui/src/index.css
+++ b/src/mtool/ui/src/index.css
@@ -9,6 +9,7 @@ body {
 }
 
 ::-webkit-scrollbar {
+  height: 14px;
   width: 14px;
 }
 
